--- a/package.json
+++ b/package.json
@@ -8,17 +8,20 @@
   "author": "goSahare",
   "license": "ISC",
   "devDependencies": {
+    "bootstrap": "^3.3.7",
     "browser-sync": "^2.15.0",
     "browserify": "^13.1.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-jshint": "^2.0.1",
     "gulp-uglify": "^2.0.0",
+    "ng-dialog": "^0.6.4",
     "oauth-signature": "^1.3.1",
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
     "angular": "^1.5.8",
-    "angular-ui-router": "^0.3.1"
+    "angular-ui-router": "^0.3.1",
+    "jquery": "^3.1.0"
   }
 }
