--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
   "author": "goSahare",
   "license": "ISC",
   "devDependencies": {
-    "bootstrap": "^3.3.7",
     "browser-sync": "^2.15.0",
     "browserify": "^13.1.0",
     "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.0",
     "gulp-jshint": "^2.0.1",
     "gulp-uglify": "^2.0.0",
-    "ng-dialog": "^0.6.4",
+    "jshint": "^2.9.3",
+    "lodash": "^4.15.0",
+    "materialize-css": "^0.97.7",
+    "ng-autocomplete": "^1.0.0",
     "oauth-signature": "^1.3.1",
     "vinyl-source-stream": "^1.1.0"
   },
